# monorepo

./: .envrc  .gitignore  Cargo.toml  README.md  build_iso.sh  ca.crt  codecov.yml  dev-db.nu  dev-db.sh  flake.nix  hostkey-rsa-initrd  hostkey-rsa-initrd.pub  overlay.nix  pkgs.nix  renovate.json
.github/: dependabot.yaml
apps/ananas-music-control/: Cargo.toml
apps/ananas-music-control/.cargo/: config.toml
apps/ananas-music-control/src/: app.rs  epaper.rs  gui.rs  library.rs  main.rs  playback.rs  touch.rs  touchpanel.rs  views.rs
apps/ananas-music-control/src/gui/: controls.rs  fonts.rs  geometry.rs  mod.rs  positioning.rs
apps/ananas-music-control/src/gui/controls/: button.rs  item_scroller.rs  mod.rs  progress_bar.rs  stack_panel.rs  text.rs
apps/ananas-music-control/src/gui/layouts/: stack.rs
apps/ananas-music-control/src/gui/reactivity/: property.rs
apps/bar/: Cargo.toml
apps/bar/src/: main.rs  sway.rs  upower.rs
apps/hat/: Cargo.toml  pyproject.toml
apps/hat/main/: cli.py
apps/hat/src/: deconz.rs  deconz_frame.rs  main.rs  slip.rs
apps/hat/typings/zigpy_deconz/: __init__.pyi  api.pyi  config.pyi  exception.pyi  types.pyi  uart.pyi  utils.pyi
apps/hat/typings/zigpy_deconz/zigbee/: application.pyi
apps/home-automation/: Cargo.toml
apps/home-automation/src/: debouncer.rs  main.rs
apps/r/: Cargo.toml
apps/r/src/: kubernetes.rs  main.rs  pki.rs
apps/rad/: Cargo.toml
apps/rad/.sqlx/: query-213ff582af9c3ec4fbcd1687bc1f7fc70ef210b6652f704a6fe57c26abd31cc9.json  query-a58112c79060c653dc7f8f8b8c01ed8a12ac0d4442bc061c7fca762b2ea55b79.json
apps/rad/migrations/: 20240406102122_initial.sql  20240415124420_current_closure.sql
apps/rad/src/: main.rs
apps/ras/: Cargo.toml  logfile
apps/ras/.sqlx/: query-08b3c646f24c8623064487f3c81666f84901b07cd1b4dcf8417a1dc3a80a9980.json
apps/ras/dev/: db.sh
apps/ras/migrations/: 20240415152007_initial.sql
apps/ras/migrations/2026-06-26-125655-0000_create_closure_state/: up.sql
apps/ras/migrations/2026-06-27-120902-0000_homes/: up.sql
apps/ras/src/: datafile.rs  homes.rs  hosts.rs  main.rs  models.rs  schema.rs
apps/ras/src/app/: events.rs  herd.rs  maintenance.rs  mod.rs  todos.rs
apps/ras/src/calendar/: store.rs
apps/ras/src/herd/: mod.rs
apps/ras/src/maintenance/: mod.rs
apps/ras/src/todo/: store.rs
apps/rat/: Cargo.toml
apps/rat/src/: datafile.rs  main.rs  store.rs  todo.rs
apps/rat/src/calendar/: store.rs
apps/rat/src/cli/: add.rs  calendar.rs  edit.rs  list.rs  maintenance.rs  mod.rs  state_transition.rs
apps/rat/src/todo/: mod.rs  store.rs
apps/ratweb/: Cargo.toml
apps/ratweb/end2end/: playwright.config.ts
apps/ratweb/src/: app.rs  main.rs
apps/ratweb/style/: main.scss
certificates/: ca-hosts.crt  ca-internal.crt  ca-kubernetes-darkmore.crt
data/: hosts.nix  package-versions.nix  paths.nix  ssh-keys.nix  syncthing-devices-ids.nix  syncthing.nix
fleet/: default.yml
libs/rust/ratlib/: Cargo.toml
libs/rust/ratlib/src/: lib.rs
libs/rust/ratlib/src/calendar/: event.rs  store.rs
libs/rust/ratlib/src/datetime/: mod.rs
libs/rust/ratlib/src/herd/: mod.rs
libs/rust/ratlib/src/secrets/: mod.rs
libs/rust/ratlib/src/todo/: client.rs  mod.rs  store.rs
machines/: _all.nix  _notlive.nix  ananas.nix  angelsin.nix  blackwood.nix  caligari.nix  crimson.nix  desktop.nix  dev-vm.nix  evillian.nix  hallewell.nix  iso.nix  moonfall.nix  shadowmend.nix  shadowsoul.nix  thornton.nix
modules/: android-dev.nix  arm-builder.nix  base.nix  bcachefs.nix  github-runner.nix  greetd.nix  installed-base.nix  installed_base.nix  iso.nix  machine-kind.nix  minecraft.nix  nas-client.nix  postgresql-server.nix  rad.nix  ras.nix  roc-sink.pipewire.conf  roles.nix  scarlett.pipewire.conf  steam.nix  sway.nix  syncthing.nix  telegraf.nix  terraform-tokens.nix  updates.nix  workstation.nix  x86-builder.nix  zram-swap.nix
outputs/: checks.nix  dev-shells.nix  home-configurations-x86_64-linux.nix  nixos-configurations-x86_64-linux.nix  packages.nix
overrides/: tflint.nix
roles/: all.nix  hetzner-cloud.nix  installed.nix  nas-client.nix  private.nix  public.nix
scripts/: deploy-host-certificate.bash  generate-host-keys.bash  generate-syncthing-keys.bash  make-postgres-password.bash  make-preinstall-bundle.bash
secrets/: angelsin-linux-ssh-host-key-ed25519.age  angelsin-linux-ssh-host-key-rsa.age  angelsin-linux-syncthing-cert.age  angelsin-linux-syncthing-key.age  attic-admin.age  backups-common-env.age  backups-common-password.age  backups-common-rclone.age  backups-env.age  backups-public-env.age  backups-public-password.age  backups-public-rclone.age  backups-rclone.age  caligari-github-pat-runner-registration.age  caligari-minecraft-rclone-config.age  caligari-postgres-backups-env.age  caligari-postgres-backups-rclone.age  crimson-ssh-host-key-ed25519.age  crimson-ssh-host-key-rsa.age  darkmore-control-plane-0-ssh-host-key-ed25519.age  darkmore-control-plane-0-ssh-host-key-rsa.age  darkmore-control-plane-1-ssh-host-key-ed25519.age  darkmore-control-plane-1-ssh-host-key-rsa.age  darkmore-control-plane-2-ssh-host-key-ed25519.age  darkmore-control-plane-2-ssh-host-key-rsa.age  darkmore-kubeconfig.age  darkmore-worker-0-ssh-host-key-ed25519.age  darkmore-worker-0-ssh-host-key-rsa.age  fleet-mdm-wstep-cert.age  fleet-mdm-wstep-key.age  github-pat-npm-registry.age  github-pat-runner-registration.age  grafana-secret-key.age  hallewell-postgres-backups-env.age  hallewell-postgres-backups-rclone.age  hallewell-ssh-host-key-ed25519.age  hallewell-ssh-host-key-rsa.age  hallewell-syncthing-cert.age  hallewell-syncthing-key.age  hostkey-ed25519-initrd.age  (+43 more)
terraform/: .terraform.lock.hcl  .tflint.hcl  README.md  argocd.tf  authentik.tf  authentik_oauth2.tf  backblaze.tf  caligari.tf  dns_agares_info.tf  dns_luczkiewi_cz.tf  dns_ramona_fun.tf  dns_savin_gallery.tf  dns_sawin_gallery.tf  ext_node_hallewell.tf  ext_node_shadowsoul.tf  gcs_budget.tf  github_repo_ramonacat_monorepo-secret.tf  github_repo_ramonacat_monorepo.tf  grafana.tf  k8s-nodes.json  k8s.tf  k8s_argocd.tf  k8s_attic.tf  (+18 more)
(+1124 files in other folders)
