[package]
name = "ananas-music-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
cpal = "0.15.3"
embedded-graphics = "0.8.1"
flac = "0.5.0"
fontdue = "0.9.2"
opentelemetry = "0.27.0"
opentelemetry-otlp = "0.27.0"
opentelemetry_sdk = { version = "0.27.0", features = ["tokio"] }
rodio = "0.20.1"
rppal = "0.19.0"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = {version="0.3.18", features = ["env-filter"]}
