[package]
name = "ananas-music-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
cpal = "0.15.3"
embedded-graphics = "0.8.1"
flac = "0.5.0"
fontdue = "0.9.2"
opentelemetry = "0.27.1"
opentelemetry-otlp = "0.27.0"
opentelemetry_sdk = { version = "0.27.1", features = ["tokio"] }
rodio = "0.20.1"
rppal = "0.21.0"
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = {version="0.3.19", features = ["env-filter"]}
