[package]
name = "ananas-music-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
cpal = "0.15.3"
embedded-graphics = "0.8.1"
flac = "0.5.0"
fontdue = "0.9.3"
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["tonic", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
rodio = "0.20.1"
rppal = "0.22.1"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = {version="0.3.19", features = ["env-filter"]}
