[package]
name = "bar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
libc = "0.2.152"
regex = "1.10.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_derive = "1.0.190"
serde_json = "1.0.111"
swayipc-async = "2.0.2"
tokio = { version = "1.33.0", features = ["full"] }
upower_dbus = "0.3.2"
zbus = { version = "3.14.1", features = ["tokio"] }
