[tool.poetry]
name = "hat"
version = "0.1.0"
description = ""
authors = ["Ramona Łuczkiewicz <ja@agares.info>"]
packages = [{include = "main"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
hat = 'main.cli:main'

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pyright = "^1.1.355"

[tool.pyright]
strict = ["."]
typeCheckingMode = "strict"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
