[package]
name = "home-automation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = "1.5.1"
async-trait = "0.1.74"
chrono = "0.4.32"
serde = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
