[package]
name = "r"
version = "0.1.0"
edition = "2024"

[dependencies]
base64_light = "0.1.6"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
k8s-openapi = { version = "0.28.0", features = ["latest"] }
kube = "4.0.0"
openssl = "0.10.81"
serde-saphyr = "0.0.29"
thiserror = "2.0.18"
