[package]
name = "rad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hostname = "0.4.2"
reqwest = { version = "0.12.25", features = ["rustls-tls", "json", "blocking"], default-features = false }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
ratlib = { path = "../../libs/rust/ratlib/" }
serde = { version = "1.0.228", features = ["derive"] }
