[package]
name = "ras"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-tracing-opentelemetry = "0.19.0"
opentelemetry = "0.24.0"
opentelemetry-otlp = "0.16.0"
opentelemetry_sdk = { version = "0.24.0", features = ["tokio", "rt-tokio"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.24.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ratlib = { path = "../../libs/rust/ratlib/" }
serde = { version = "1.0.204", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = { version = "0.9", features = ["serde"] }
thiserror = "1.0.62"
serde_json = "1.0.120"
tokio-postgres = "0.7.10"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "migrate" ] }
