[package]
name = "ras"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-tracing-opentelemetry = "0.19.0"
opentelemetry = "0.24.0"
opentelemetry-otlp = "0.17.0"
opentelemetry_sdk = { version = "0.24.1", features = ["tokio", "rt-tokio"] }
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.25.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ratlib = { path = "../../libs/rust/ratlib/" }
serde = { version = "1.0.204", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = { version = "0.9", features = ["serde"] }
thiserror = "1.0.63"
serde_json = "1.0.121"
tokio-postgres = "0.7.11"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "postgres", "migrate" ] }
