[package]
name = "rat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.9"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
petgraph = "0.6.4"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.58"
ratlib = { path = "../../libs/rust/ratlib/" }
reqwest = { version = "0.12.2", features = ["rustls-tls", "json", "blocking"], default-features = false }
tokio = { version = "1.37.0", features = ["full"] }
