[package]
name = "rat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.9"
clap = { version = "4.5.15", features = ["derive"] }
colored = "2.1.0"
petgraph = "0.6.5"
regex = "1.10.6"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"
thiserror = "1.0.63"
ratlib = { path = "../../libs/rust/ratlib/" }
reqwest = { version = "0.12.5", features = ["rustls-tls", "json", "blocking"], default-features = false }
tokio = { version = "1.39.2", features = ["full"] }
