[package]
name = "ratlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1.3.2", features = ["derive"] }
chrono = { version = "0.4.35", features = ["serde", "arbitrary"] }
chrono-tz = { version = "0.8.6", features = ["arbitrary"] }
rand = "0.8.5"
reqwest = { version = "0.11.27", features = ["rustls-tls", "json", "blocking"], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.58"

[dev-dependencies]
