[package]
name = "ratlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1.4.2", features = ["derive"] }
chrono = { version = "0.4.43", features = ["serde", "arbitrary"] }
chrono-tz = { version = "0.10", features = ["arbitrary"] }
rand = "0.9.2"
reqwest = { version = "0.12.28", features = ["rustls-tls", "json", "blocking"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
